samples/_failures_safe/1761274559_e7c304_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_81d294e8.c: In function ‘main’:
./samples/SAFE/__tmp_81d294e8.c:159:5: error: expected declaration or statement at end of input
  159 |     switch (choice) {
      |     ^~~~~~
./samples/SAFE/__tmp_81d294e8.c:159:5: error: expected declaration or statement at end of input
